# realm-of-spells-desktop

./: .gitignore  CMakeLists.txt  README.md
ros-game/: CMakeLists.txt
ros-game/src/: main.cpp
ros-launcher/: CMakeLists.txt
ros-launcher/forms/: login_window.ui  personal_account_window.ui
ros-launcher/src/: login_window.cpp  login_window.h  main.cpp  main_window.cpp  main_window.h  personal_account_window.cpp  personal_account_window.h
